# geo_platform

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .gitignore  Dockerfile  manage.py  pyproject.toml
backend/geo_platform/: asgi.py  urls.py  wsgi.py
backend/geo_platform/apps/aoi/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/geo_platform/apps/aoi/management/commands/: load_data_.py
backend/geo_platform/apps/aoi/migrations/: 0001_initial.py
backend/geo_platform/apps/users/: apps.py
backend/geo_platform/settings/: common.py
backend/scripts/: docker-entrypoint.sh
